--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "mocha": "^2.5.3",
     "nock": "^8.0.0",
     "npm-run-all": "^2.1.1",
+    "onsenui": "^2.3.1",
     "open": "0.0.5",
     "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^3.0.0-beta.2",
+    "react-onsenui": "^1.3.2",
     "redux-immutable-state-invariant": "^1.2.3",
     "redux-mock-store": "^1.0.4",
     "style-loader": "^0.13.1",
